fix navbar alignment issues

--- a/components/navbar/navbarDesktop.css
+++ b/components/navbar/navbarDesktop.css
@@ -25,7 +25,7 @@
     cursor: pointer;
 }
 
-.navbar-catagories {
+.navbar-categories {
     float: right;
 }
 
